--- a/css/style.css
+++ b/css/style.css
@@ -19,14 +19,17 @@ img {
 /* Layout */
 .wrapper {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 80px);
     /* debug */
     background-color: brown;
+}
+/* Utilities */
+.h-80 {
+    height: 80px;
 }
 /* Upgrade */
 .upgrade {
     background-color: #080B12;
-    height: 80px;
     width: 100%;
     position: fixed;
     display: flex;
@@ -40,18 +43,17 @@ img {
     width: 15%;
     color: white;
     position: fixed;
-    overflow-y: auto;
+    /* overflow-y: auto; */
 }
 /* Main content */
 .main {
     height: 100vh;
     overflow-y: auto;
+    background-color:  #141922;
 }
 /* Song info */
 .song-info {
-    height: 80px;
     background-color: #282828;
     width: 100%;
-    position: sticky;
-    bottom: 0;
+    position: relative;
 }
