--- a/css/style.css
+++ b/css/style.css
@@ -366,3 +366,29 @@ nav {
     transition: width 0.3s ease, height 0.3s ease; 
     transform: scale(1.1);
 }
+.right {
+    display: flex;
+    align-items: center;
+    margin-right: 15px;
+}
+.icons-right {
+    color: #fff;
+}
+.line-right {
+    border-bottom: 4px solid #928c8c;
+    border-radius: 30px;
+    width: 150px;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    position: relative;
+    margin-bottom: 23px;
+    margin-left: 5px;
+}
+.line-inside-right {
+    position: absolute;
+    bottom: 1;
+    left: 0;   
+     border-bottom: 4px solid #fff;
+    border-radius: 30px;
+    width: 25px;
+}
